# SimpleEngine

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/vulkanslidetest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Debug.hpp  Instance.hpp  Renderer copy.cpp  Renderer copy.hpp  Renderer.cpp  Renderer.hpp  Utility.hpp  Vec3.hpp  Vertex.hpp  main.cpp
app/src/main/java/com/example/vulkanslidetest/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/vulkanslidetest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
